# horao

./: .env  .env.production  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  devcontainer.json  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build-test.yml  codecoverage.yml  create-docker-package.yml  python.yml  qodana.yml  tox.yml  type-checks.yml
config/: default.toml
docs/: Architecture.md  Authentication.md  Controllers.md  CreateVirtualEnv.md  Development.md  Research.md  Telemetry.md  index.md
ds/: research_overview.md
horao/: __init__.py  __main__.py  main.py  wsgi.py
horao/api/: __init__.py  alive_controller.py  authenticate.py  synchronization.py  user_actions.py
horao/auth/: __init__.py  basic.py  basic_auth.py  error.py  multi.py  peer.py  permissions.py  roles.py  validate.py
horao/conceptual/: __init__.py  claim.py  crdt.py  decorators.py  osi_layers.py  support.py  tenant.py
horao/controllers/: __init__.py  alive_controller.py  aws.py  base.py  csm.py  gcp.py  ma.py  manual_changes.py  ochami.py  synchronization.py
horao/crdts/: __init__.py  array.py  clock.py  data_types.py  helpers.py  map.py  protocols.py  register.py  set.py  update.py
horao/env/: .env.development  .env.production
horao/logical/: __init__.py  claim.py  data_center.py  infrastructure.py  resource.py  scheduler.py
horao/models/: __init__.py  components.py  composite.py  crdt.py  dc.py  decorators.py  hardware.py  internal.py  list.py  logical.py  network.py  osi_layers.py  scheduler.py  status.py
horao/openapi/: openapi.yml
horao/persistance/: __init__.py  serializable.py  serialize.py  store.py
horao/physical/: __init__.py  component.py  composite.py  computer.py  hardware.py  network.py  storage.py
horao/rbac/: __init__.py  mappings.py  permission.py  roles.py
horao/spec/: development.yaml  production.yaml
horao/swagger/: swagger-development.yaml  swagger.yaml
research/: data_validation.ipynb  run_all_validations.py
research/cloud_resource_management/: README.md  cross_provider_performance_results.json  resource_optimization_results.json  run_validation.py  scaling_overhead_results.json  test_cross_provider_performance.py  test_resource_optimization.py  test_scaling_overhead.py
research/data/: authorization_boundaries_results.json  distributed_testing_results.json  telemetry_overhead_results.json
research/devops_practices/: README.md  container_optimization_results.json  dependency_management_results.json  distributed_testing_results.json  run_validation.py  test_container_optimization.py  test_dependency_management.py  test_distributed_testing.py
research/distributed_systems_consistency/: README.md  clock_drift_results.json  concurrent_updates_results.json  distributed_tracing_results.json  network_partition_results.json  run_validation.py  test_clock_drift.py  test_concurrent_updates.py  test_network_partition.py
spec/: development.yaml  production.yaml
src/: lib.rs  main.rs  settings.rs
src/model/: hardware.rs  (+3 more)
tests/: __init__.py  basic_auth.py  helpers.py  int_test.rs  model_test.rs  test_alive_controller.py  test_api.py  test_crdt.py  test_full_stack.py  test_internal.py  test_model_network.py  test_multi_node.py  test_persistance.py  test_synchronize_call.py
(+31 files in other folders)
