[tool.poetry]
name = "horao"
version = "2024.1.1"
description = "HORAO - management engine for hybrid multi-cloud environments"
readme = "README.md"
authors = ["Pim Witlox <pim@witlox.io>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
uvicorn-worker = "^0.2.0"
gunicorn = "^23.0.0"
networkx = "^3.4.2"
starlette = "^0.41.0"
pyjwt = "^2.9.0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation-logging = "^0.48b0"
opentelemetry-instrumentation-starlette = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
redis = "^5.1.1"
authlib = "^1.3.2"
apiman = "^0.5.4"
boto3 = "^1.20.0"
google-cloud-compute = "^1.23.0"
azure-mgmt-compute = "^34.0.0"
azure-identity = "^1.19.0"

[tool.poetry.scripts]
horao = 'horao.main:main'

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.12.1"
pylint = "^3.3.1"
pre-commit = "^4.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"
pytest_httpserver = "^1.1.0"

[tool.poetry.group.test]
optional = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov --cov-report xml"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/main.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
